Correcting spacing on homepage slider.

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -2610,6 +2610,10 @@ section[role="leader"] .leader-popout {
   height: 250px;
 }
 
+.slider.home {
+  height: 400px;
+}
+
 .slider h1 {
 	color: #FFF;
 	display: block;
